src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  html {
    font-size: 17px;
  }
}

@layer components {

  /* Tiptap Image Resizing */
  .ProseMirror .resizer {
    position: relative;
    display: inline-block;
    line-height: 0;
  }

  .ProseMirror .resizer img {
    cursor: default;
  }

  .ProseMirror .resizer .resizer-handle {
    position: absolute;
    width: 12px;
    height: 12px;
    background-color: #2563EB;
    border: 1px solid white;
    z-index: 10;
  }

  .ProseMirror .resizer .resizer-handle-nw {
    top: -6px;
    left: -6px;
    cursor: nw-resize;
  }

  .ProseMirror .resizer .resizer-handle-ne {
    top: -6px;
    right: -6px;
    cursor: ne-resize;
  }

  .ProseMirror .resizer .resizer-handle-sw {
    bottom: -6px;
    left: -6px;
    cursor: sw-resize;
  }

  .ProseMirror .resizer .resizer-handle-se {
    bottom: -6px;
    right: -6px;
    cursor: se-resize;
  }
}

